--- a/cgi-install.html
+++ b/cgi-install.html
@@ -51,7 +51,10 @@
 				<th><a href="https://raw.githack.com/CA-Apps/CGI/master/builds/cgi-qa.apk">CGI 2.0 QA (Android) </a></th>
 			</tr>
 			
-			
+			<tr>
+				<th>6</th>
+				<th><a href="itms-services://?action=download-manifest&amp;url=https://raw.githack.com/CA-Apps/CGI/master/builds/cgiqa.plist">CGI 2.0 QA 0.13 (iOS)</a></th>
+			</tr>
 		</tbody>
 	</table>
 	</div>
